--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ rapidfuzz>=3.9.6
 openai>=1.40.0
 httpx>=0.27.0
 pandas
+groq>=0.9.0
+google-generativeai>=0.6.0
+cohere>=5.5.8
+huggingface-hub>=0.23.0
+
